docs/archive/0.3.3/guides/index.md
---
layout: docu
title: Guides
selected: Guides
---

The guides section contains compact how-to guides that are focused on achieving a single goal. For an in-depth reference see the Documentation section.

## SQL: Data Import & Export

##### CSV Files
* [How to load a CSV file into a table](../guides/import/csv_import)
* [How to export a table to a CSV file](../guides/import/csv_export)

##### Parquet Files
* [How to load a Parquet file into a table](../guides/import/parquet_import)
* [How to export a table to a Parquet file](../guides/import/parquet_export)
* [How to run a query directly on a Parquet file](../guides/import/query_parquet)

##### HTTP & S3
* [How to load a Parquet file directly from HTTP(s)](../guides/import/http_import)
* [How to load a Parquet file directly from S3](../guides/import/s3_import)

## SQL: Meta Queries

* [How to list all tables](../guides/meta/list_tables)
* [How to view the schema of the result of a query](../guides/meta/describe)
* [How to quickly get a feel for a dataset using summarize](../guides/meta/summarize)
* [How to view the query plan of a query](../guides/meta/explain)
* [How to profile a query](../guides/meta/explain_analyze)

## Python Client
* [How to install the Python client](../guides/python/install)
* [How to execute SQL queries](../guides/python/execute_sql)
* [How to execute SQL on a Pandas DataFrame](../guides/python/sql_on_pandas)
* [How to create a table from a Pandas DataFrame](../guides/python/import_pandas)
* [How to export data to a Pandas DataFrame](../guides/python/export_pandas)
* [How to easily query DuckDB in Jupyter Notebooks](../guides/python/jupyter)

## SQL Editors / IDE's
* [How to set up the DBeaver SQL IDE](../guides/sql_editors/dbeaver)